# GTP

./: .gitignore  Makefile  README.md  manifest.txt
cpp/: BipartiteGraph.h  Bipartition.cpp  Bipartition.h  CMakeLists.txt  EdgeAttribute.h  Geodesic.h  PhyloTree.h  PhyloTreeEdge.h  PolyMain.h  Ratio.h  RatioSequence.h  TreeDistance.h
distanceAlg1/: Bipartition.java  EdgeAttribute.java  Geodesic.java  PhyloTree.java  PhyloTreeEdge.java  Ratio.java  RatioSequence.java  TreeDistance.java
polyAlg/: BipartiteGraph.java  PolyMain.java  Tools.java  Vertex.java
